tests/integration/istioctl/testdata/servicerole.yaml
apiVersion: rbac.istio.io/v1alpha1
kind: ServiceRole
metadata:
  name: service-role
spec:
  rules:
  - services: ["*"]
